# PixelRAG

./: .gitignore  .upptimerc.yml  AGENTS.md  README.md  RELEASING.md  chromium-screenshot-patches.diff  package-lock.json  pyproject.toml
eval/: PAPER_EXPERIMENT_MAP.md  REPRODUCE.md  REPRODUCE_PROGRESS.txt  pyproject.toml  reproduce.sh  run_bench.py  run_livevqa.py  run_monaco.py  serve_up.sh
eval/lib/: __init__.py  benchmarks.py  grader.py  llm.py  model_config.py  pixel_query.py  retrieval.py  retrievers.py  screenshot.py  simpleqa_data.py  simpleqa_filter.py
eval/repro_assets/: judge_worldvqa_prompt.txt
train/: .gitignore  CLAUDE.md  CONTRASTORS.md  README.md  build_test_miniv8.py  clean_queries_simpleqa_style.py  convert_data_for_swift.py  dataset.py  eval_checkpoint.py  evaluate.py  export_natural_filtered_v2.py  export_natural_filtered_v2_with_answer.py  extract_hf_image_shards.py  fake_data.py  filter_entity_queries.py  filter_hard.py  filter_hard_negatives_vqa.py  filter_passage.py  filter_strict.py  filter_text_hard_negatives_llm.py  filter_v2.py  mine_hard_negatives.py  mine_text_hard_negatives.py  model.py  package_hf_image_shards.py  prepare_hf_dataset.py  prepare_hf_dataset_single_jsonl.py  pyproject.toml  run_all_evals.sh  run_filter_hard_negatives_chunks.py  run_filter_text_hard_negatives_chunks.py  run_remaining_evals.sh  split_first5_chunks.py  train.py  train_contrastors.py  train_swift.py  upload_hf_dataset.py  upload_test_miniv6.py  upload_test_miniv7.py  upload_test_miniv8.py  (+2 more)
train/docs/: natural_filtered_v2.md  reproduce_v8r.md  swift_training.md  training_dev_notes.md  training_report_2026-04-02.md  v8_ablation_results.md
train/models/: __init__.py  biqwen3.py
train/recipes/: v8s_ablation.sh
train/sft/: RESULTS.md  download_tiles.py  eval_baseline.py  eval_fanout.sh  eval_multiimage.py  eval_think_comparison.sh  fetch_top6_retrieval.py  generate_think_traces.py  generate_think_traces_v2.py  prepare_mixed_data.py  prepare_sft_data.py  prepare_sft_data_multiimage.py  (+59 more)
(+123 files in other folders)
