[project]
name = "pixelrag-repro"
version = "0.1.0"
description = "Reproduction harness for the PixelRAG (Vis-RAG) paper Table 1 — drives the paper's own run_naive_simpleqa.py + evaluate.py against live retrieval/reader serves."
requires-python = ">=3.12,<3.13"
# These are the deps the paper's API-path code (scripts/run_naive_simpleqa.py,
# scripts/simpleqa, scripts/evaluate.py, evaluation/*) imports when retrieval + reader
# run as remote HTTP serves (no local torch/vllm needed -- the model serves are separate).
# The paper repo itself is pinned in REPRODUCE.md (yichuan-w/Vis-RAG @ e591fd0).
dependencies = [
    "aiohttp==3.13.5",
    "datasets==4.8.5",
    "openai==2.38.0",
    "tqdm==4.67.3",
    "pillow==12.2.0",
    "requests==2.34.2",
    "numpy==2.4.6",
    "selenium==4.44.0",
    "webdriver-manager==4.1.1",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.1",
    "tiktoken==0.13.0",
    "trafilatura==2.0.0",
    "litellm==1.86.2",
    "botocore==1.43.18",
    "tenacity==9.1.4",
    "fastmcp==3.3.1",
    "omegaconf==2.3.0",
    "retry==0.9.2",
]

[tool.uv]
package = false
