[project]
name = "wiki-screenshot-training"
version = "0.1.0"
description = "Wiki screenshot embedding training with Qwen3-VL + LoRA"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch==2.9.1",
    "torchvision",
    "transformers==4.57.1",
    "nvidia-cudnn-cu12==9.20.0.48",
    "peft>=0.15.0",
    "accelerate>=1.0.0",
    "Pillow",
    "tqdm",
    "numpy",
    "faiss-cpu",
    "wandb",
    "safetensors",
    "huggingface-hub",
    "qwen-vl-utils",
    "datasets",
    "openai>=2.30.0",
]

[tool.uv]
package = false
override-dependencies = ["nvidia-cudnn-cu12==9.20.0.48"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
